--- a/.github/workflows/test-dispatch.yml
+++ b/.github/workflows/test-dispatch.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Dispatch test-target.yml
-        uses: ./.github/actions/sequential-dispatcher
+        uses: KalanaRatnayake/sequential-dispatcher@v1
         with:
           workflow_file: .github/workflows/test-target.yml
           ref: main
